항공편의 출발도시, 도착도시를 추가로 출력

--- a/exercise10/webapp/view/Main.view.xml
+++ b/exercise10/webapp/view/Main.view.xml
@@ -15,6 +15,12 @@
 
                                 <Label text="Flight number" />
                                 <Text text="{Connid}" /> <!--항공편의 번호-->
+
+                                <Label text="Departure" />
+                                <Text text="{Cityfrom}" /> <!--항공편의 출발도시-->
+
+                                <Label text="Destination" />
+                                <Text text="{Cityto}" /> <!--항공편의 도착도시-->
                             </f:SimpleForm>
                         </content>
                     </Page>
