화면 레이아웃 수정

--- a/exercise10/webapp/view/Main.view.xml
+++ b/exercise10/webapp/view/Main.view.xml
@@ -4,9 +4,9 @@
     xmlns:f="sap.ui.layout.form">
     <Page id="page" title="{i18n>title}">
         <content >
-            <Carousel pages="{/ConnectionSet}">
+            <Carousel pages="{/ConnectionSet}" height="50%" > <!--페이지의 절반만 사용-->
                 <pages>
-                    <Page>
+                    <Page showHeader="false">
                         <content>
                             <!-- 항공편 정보를 sap.ui.layout.form.SimpleForm으로 출력 -->
                             <f:SimpleForm >
