Url 컬럼 href 옵션 추가

--- a/exercise11/webapp/view/Main.view.xml
+++ b/exercise11/webapp/view/Main.view.xml
@@ -20,7 +20,7 @@
                                 <Text text="{Carrid}" />
                                 <Text text="{Carrname}" />
                                 <Text text="{Currcode}" />
-                                <Text text="{Url}" />
+                                <Link text="{Url}" href="{Url}" />
                             </cells>
                         </ColumnListItem>
                     </items>
