SingleSelectMaster를 이용해서 라인선택

--- a/exercise11/webapp/view/Main.view.xml
+++ b/exercise11/webapp/view/Main.view.xml
@@ -7,7 +7,7 @@
             <Panel headerText="Carriers" expandable="false" expanded="true" height="200px" >
                 <Table 
                     items="{/CarrierSet}" 
-                    mode="SingleSelect"
+                    mode="SingleSelectMaster"
                     >
                     <!-- column은 딱 한번만 출력 -->
                     <columns>
