--- a/exercise11/webapp/view/Main.view.xml
+++ b/exercise11/webapp/view/Main.view.xml
@@ -7,7 +7,8 @@
             <Panel headerText="Carriers" expandable="false" expanded="true" height="200px" >
                 <Table 
                     items="{/CarrierSet}" 
-                    mode="SingleSelectMaster"
+                    mode="SingleSelectLeft"
+                    selectionChange=".onSelectionChange"
                     >
                     <!-- column은 딱 한번만 출력 -->
                     <columns>
