--- a/homework1/webapp/view/View1.view.xml
+++ b/homework1/webapp/view/View1.view.xml
@@ -2,6 +2,35 @@
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <Panel expandable="false" expanded="true">
+                <Table 
+                    items="{/ConnSet}"
+                    mode="SingleSelectMaster"
+                    selectionChange=".onSelectionChange"
+                    >
+                    <columns>
+                        <Column ><Label text="항공사" /></Column>
+                        <Column ><Label text="항공편번호" /></Column>
+                        <Column ><Label text="출발국가" /></Column>
+                        <Column ><Label text="출발도시" /></Column>
+                        <Column ><Label text="도착국가" /></Column>
+                        <Column ><Label text="도착도시" /></Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem >
+                            <cells>
+                                <Text text="{Carrid}" />
+                                <Text text="{Connid}" />
+                                <Text text="{Countryfr}" />
+                                <Text text="{Cityfrom}" />
+                                <Text text="{Countryto}" />
+                                <Text text="{Cityto}" />
+                            </cells>
+                        </ColumnListItem>
+                    </items>
+                </Table>
+            </Panel>
+        </content>
     </Page>
 </mvc:View>
