--- a/homework1/webapp/view/View1.view.xml
+++ b/homework1/webapp/view/View1.view.xml
@@ -1,6 +1,7 @@
 <mvc:View controllerName="sync.e21.homework1.controller.View1"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}">
         <content>
             <Panel expandable="false" expanded="true">
