팝업창 텍스트 수정

--- a/homework1/webapp/view/Info.fragment.xml
+++ b/homework1/webapp/view/Info.fragment.xml
@@ -16,8 +16,29 @@
                     <f:content>
                         <l:HorizontalLayout >
                             <Label text="항공사" />
-                            <Text text="{}" />
+                            <Text text="{/Carrid}" />
                         </l:HorizontalLayout>
+                        <l:HorizontalLayout >
+                            <Label text="항공편번호" />
+                            <Text text="{/Connid}" />
+                        </l:HorizontalLayout>
+                        <l:HorizontalLayout >
+                            <Label text="비행시간" />
+                            <Text text="{/Fltime}" />
+                        </l:HorizontalLayout>
+                        <l:HorizontalLayout >
+                            <Label text="출발시간" />
+                            <Text text="{/Deptime}" />
+                        </l:HorizontalLayout>
+                        <l:HorizontalLayout >
+                            <Label text="도착시간" />
+                            <Text text="{/Arrtime}" />
+                        </l:HorizontalLayout>
+                        <l:HorizontalLayout >
+                            <Label text="비행거리" />
+                            <Text text="{/Distance}{/Distid}" />
+                        </l:HorizontalLayout>
+
                     </f:content>
                 </f:SimpleForm>
             </l:VerticalLayout>
