--- a/exercise12/webapp/view/Main.view.xml
+++ b/exercise12/webapp/view/Main.view.xml
@@ -1,7 +1,26 @@
 <mvc:View controllerName="sync.e21.exercise12.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:f="sap.ui.layout.form">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <f:SimpleForm layout="ResponsiveGridLayout" >
+                <Label text="Carrier" />
+                <Input value="{
+                    model: 'view',
+                    path: '/Carrid',
+                    type: 'sap.ui.model.type.String',
+                    constraints: {
+                        minLength: 1,
+                        maxLength: 3
+                    }
+                }"
+                validationError="onCarridValidError" 
+                />
+                
+                <Label text="Flight connectin" />
+                <Input value="{view>/Connid}" />    
+            </f:SimpleForm>
+        </content>
     </Page>
 </mvc:View>
