--- a/exercise12/webapp/view/Main.view.xml
+++ b/exercise12/webapp/view/Main.view.xml
@@ -1,7 +1,9 @@
 <mvc:View controllerName="sync.e21.exercise12.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
-    xmlns:f="sap.ui.layout.form">
+    xmlns:f="sap.ui.layout.form"
+    xmlns:core="sap.ui.core"
+    >
     <Page id="page" title="{i18n>title}">
         <content>
             <f:SimpleForm layout="ResponsiveGridLayout" >
@@ -18,8 +20,17 @@
                 validationError="onCarridValidError" 
                 />
                 
-                <Label text="Flight connectin" />
-                <Input value="{view>/Connid}" />    
+                <Label text="Flight connection" />
+                <Input 
+                    core:require="{
+                        Connid: 'sync/e21/exercise12/model/type/Connid'
+                    }"
+                    value="{
+                        model: 'view',
+                        path: '/Connid',
+                        type: 'sync.e21.exercise12.model.type.Connid'
+                    }" 
+                />    
             </f:SimpleForm>
         </content>
     </Page>
