--- a/exercise8/webapp/view/Main.view.xml
+++ b/exercise8/webapp/view/Main.view.xml
@@ -4,7 +4,12 @@
     xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}">
         <content>
-            <core:Fragment fragmentName="sync.e21.exercise8.view.InputFrag" type="XML" />
+            <l:VerticalLayout>
+                <core:Fragment fragmentName="sync.e21.exercise8.view.InputFrag" type="XML" />
+
+                <core:Fragment id="frag1" fragmentName="sync.e21.exercise8.view.InputFrag" type="XML" />
+                <core:Fragment id="frag2" fragmentName="sync.e21.exercise8.view.InputFrag" type="XML" />
+            </l:VerticalLayout>
         </content>
     </Page>
 </mvc:View>
