--- a/exercise8/webapp/view/Main.view.xml
+++ b/exercise8/webapp/view/Main.view.xml
@@ -1,7 +1,9 @@
 <mvc:View controllerName="sync.e21.exercise8.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
-    xmlns:core="sap.ui.core">
+    xmlns:core="sap.ui.core"
+    xmlns:l="sap.ui.layout"
+    >
     <Page id="page" title="{i18n>title}">
         <content>
             <l:VerticalLayout>
