테이블 생성 및 데이터 넣기

--- a/hw1review/webapp/view/Main.view.xml
+++ b/hw1review/webapp/view/Main.view.xml
@@ -2,6 +2,44 @@
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <Table id="idTable" items="{/ConnSet}">
+                <columns>
+                    <Column >
+                        <Label text="항공사" />   
+                    </Column>
+                    <Column >
+                        <Label text="항공편번호" />   
+                    </Column>
+                    <Column >
+                        <Label text="출발국가" />     
+                    </Column>
+                    <Column >
+                        <Label text="출발도시" />     
+                    </Column>
+                    <Column >
+                        <Label text="도착국가" />  
+                    </Column>
+                    <Column >
+                        <Label text="도착도시" />  
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem >
+                        <cells>
+                            <!-- 키필드를 표현하기 위한 ObjectIdentifier -->
+                            <ObjectIdentifier title="{Carrid}" />
+                            <ObjectIdentifier title="{Connid}" />
+                            <!-- 키필드를 제외한 나머지 필드를 표현하기 위한 ObjectAttribute -->
+                            <!-- Text를 사용해도 무방 -->
+                            <ObjectAttribute title="{Countryfr}" />
+                            <ObjectAttribute title="{Cityfrom}" />
+                            <ObjectAttribute title="{Countryto}" />
+                            <ObjectAttribute title="{Cityto}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </content>
     </Page>
 </mvc:View>
