라인 선택 시 동작이 발생하도록 하기 위한 준비

--- a/hw1review/webapp/view/Main.view.xml
+++ b/hw1review/webapp/view/Main.view.xml
@@ -3,7 +3,12 @@
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <content>
-            <Table id="idTable" items="{/ConnSet}">
+            <Table 
+                id="idTable" 
+                items="{/ConnSet}" 
+                mode="SingleSelectMaster"
+                selectionChange="onSelectionChange"
+            >
                 <columns>
                     <Column >
                         <Label text="항공사" />   
