팝업창 내용에 데이터 넣기

--- a/hw1review/webapp/view/Info.fragment.xml
+++ b/hw1review/webapp/view/Info.fragment.xml
@@ -23,10 +23,7 @@
                  <!-- 신규라인 -->
                  <Label text="비행거리" />
                  <ObjectNumber 
-                    number="{
-                        parts: [ {path: 'Distance'} , {path: 'Distid'} ],
-                        type: 'sap.ui.model.type.unit'
-                    }" 
+                    number="{Distance}"
                     unit="{Distid}" />    
             </f:SimpleForm>
         </content>
