labelCarrname 수정(: 삭제)

--- a/odatamodel/webapp/view/Main.view.xml
+++ b/odatamodel/webapp/view/Main.view.xml
@@ -16,7 +16,7 @@
                     <t:Column >
                         <Label text="{i18n>labelCarrname}" /> 
                         <t:template>
-                            <ObjectAttribute title="{Carrname}"></ObjectAttribute>
+                            <ObjectAttribute text="{Carrname}"></ObjectAttribute>
                         </t:template>
                     </t:Column>
                     <t:Column >
