--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -2,19 +2,34 @@
     xmlns="sap.m"
     xmlns:c="sap.ui.core"
     xmlns:f="sap.ui.layout.form"
+    xmlns:l="sap.ui.layout"
     >
-    <Dialog id="idNewDialog" title="신규 항공사 정보">
+    <Dialog id="idNewDialog" title="신규 항공사 정보"
+            contentWidth="400px">
         <content>
-            <f:SimpleForm layout="ColumnLayout"
-                columnsL="2"
-                columnsM="2"
-                columnsXL="2">
+            <f:SimpleForm layout="ResponsiveGridLayout"
+                labelSpanS="4">
                 <Label text="{i18n>labelCarrid}" />
-                <Input value="{new>/Carrid}" />
+                <Input value="{new>/Carrid}" maxLength="3" required="true">
+                    <layoutData>
+                        <l:GridData span="S3" />
+                    </layoutData>
+                </Input>
+
                 <Label text="{i18n>labelCarrname}" />
                 <Input value="{new>/Carrname}" />
+
                 <Label text="{i18n>labelCurrcode}" />
-                <Input value="{new>/Currcode}" />
+                <!-- <Input value="{new>/Currcode}" /> -->
+                <ComboBox items="{view>Currency}" change="onCurrencyChange">
+                    <items>
+                        <c:Item key="{view>key}" text="{view>name}" />
+                    </items>
+                    <layoutData>
+                        <l:GridData span="S3" />
+                    </layoutData>
+                </ComboBox>
+
                 <Label text="{i18n>labelUrl}" />
                 <Input value="{new>/Url}" />                                                
             </f:SimpleForm>
