combobox items 수정

--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -21,7 +21,7 @@
 
                 <Label text="{i18n>labelCurrcode}" />
                 <!-- <Input value="{new>/Currcode}" /> -->
-                <ComboBox items="{view>Currency}" 
+                <ComboBox items="{view>/Currency}" 
                     selectionChange="onCurrencyChange">
                     <items>
                         <c:Item key="{view>key}" text="{view>name}" />
