Dialog 통화코드 combobox에 데이터 넣기

--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -21,8 +21,11 @@
 
                 <Label text="{i18n>labelCurrcode}" />
                 <!-- <Input value="{new>/Currcode}" /> -->
-                <ComboBox items="{view>/Currency}" 
-                    selectionChange="onCurrencyChange">
+                <ComboBox
+                    id="idComboBox"
+                    items="{view>/Currency}" 
+                    selectionChange="onCurrencyChange"
+                >
                     <items>
                         <c:Item key="{view>key}" text="{view>name}" />
                     </items>
