통화코드 수정

--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -27,7 +27,7 @@
                     selectionChange="onCurrencyChange"
                 >
                     <items>
-                        <c:Item key="{view>key}" text="{view>name}" />
+                        <c:Item key="{view>key}" text="{view>name} {view>key}" />
                     </items>
                     <layoutData>
                         <l:GridData span="S3" />
