--- a/odatamodel/webapp/view/Main.view.xml
+++ b/odatamodel/webapp/view/Main.view.xml
@@ -38,6 +38,12 @@
                             <Link text="웹페이지 이동" href="{Url}" />
                         </t:template>    
                     </t:Column>
+                    <t:Column>
+                        <Label text="{i18n>labelAction}" />
+                        <t:template>
+                            <Button icon="sap-icon://delete" press="onDelete" />
+                        </t:template>
+                    </t:Column>
                 </t:columns>
             </t:Table>
         </content>
