onUpdate 기능 로직 구현 및 팝업창의 원화 데이터 연결

--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -25,6 +25,7 @@
                     id="idComboBox"
                     items="{view>/Currency}" 
                     selectionChange="onCurrencyChange"
+                    selectedKey="{new>/Currcode}"
                 >
                     <items>
                         <c:Item key="{view>key}" text="{view>name} {view>key}" />
