--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -10,7 +10,7 @@
             <f:SimpleForm layout="ResponsiveGridLayout"
                 labelSpanS="4">
                 <Label text="{i18n>labelCarrid}" />
-                <Input value="{new>/Carrid}" maxLength="3" required="true" editable="false">
+                <Input value="{new>/Carrid}" maxLength="3" required="true" editable="{view>/CreateMode}">
                     <layoutData>
                         <l:GridData span="S3" />
                     </layoutData>
