--- a/odatamodel/webapp/view/New.fragment.xml
+++ b/odatamodel/webapp/view/New.fragment.xml
@@ -10,7 +10,16 @@
             <f:SimpleForm layout="ResponsiveGridLayout"
                 labelSpanS="4">
                 <Label text="{i18n>labelCarrid}" />
-                <Input value="{new>/Carrid}" maxLength="3" required="true" editable="{view>/CreateMode}">
+                <!-- visible 옵션으로 인해 -->
+                <!-- CreateMode가 false일 때 팝업창에서 사라짐 -->
+                <Input 
+                    value="{new>/Carrid}" 
+                    maxLength="3" 
+                    required="true" 
+                    editable="{view>/CreateMode}"
+                    enabled="{view>/CreateMode}"
+                    visible="{view>/CreateMode}"
+                    >
                     <layoutData>
                         <l:GridData span="S3" />
                     </layoutData>
