--- a/odatamodel_multi_delete/webapp/view/Main.view.xml
+++ b/odatamodel_multi_delete/webapp/view/Main.view.xml
@@ -1,7 +1,49 @@
 <mvc:View controllerName="sync.e21.odatamodelmultidelete.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:t="sap.ui.table"
+    xmlns:core="sap.ui.core"
+    >
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <t:Table rows="{/CarrierSet}">
+                <t:columns>
+                    <t:Column >
+                        <!-- 필드명 -->
+                        <Label text="{i18n>labelCarrid}" />
+                        <t:template>
+                            <!-- 데이터가 등장하는 구역 -->
+                            <ObjectIdentifier title="{Carrid}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column>
+                        <Label text="{i18n>labelCarrname}"></Label>
+                        <t:template>
+                            <ObjectAttribute text="{Carrname}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column>
+                        <Label text="{i18n>labelCurrcode}"></Label>
+                        <t:template>
+                            <ComboBox selectedKey="{Currcode}" 
+                                items="{view>/Currency}">
+                                <items>
+                                    <!-- 위에서 xmlns:core="sap.ui.core" 를 <mvc:View> 의 속성으로 추가 -->
+                                        <core:Item key="{view>/Key}" text="{view>/Key} : {view>/Name}" />
+                                </items>
+                            </ComboBox>
+                        </t:template>
+                    </t:Column>
+                    <t:Column>
+                        <Label text="{i18n>labelUrl}"></Label>
+                        <t:template>
+                            <Link href="{Url}" text="항공사 홈페이지 이동" />
+                            <!-- xmlns:navpopover="sap.ui.comp.navpopover" -->
+                            <!-- <navpopover:SmartLink href="{Url}" text="항공사 홈페이지 이동" /> -->
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </content>
     </Page>
 </mvc:View>
