--- a/odatamodel_multi_delete/webapp/view/Main.view.xml
+++ b/odatamodel_multi_delete/webapp/view/Main.view.xml
@@ -26,10 +26,13 @@
                         <Label text="{i18n>labelCurrcode}"></Label>
                         <t:template>
                             <ComboBox selectedKey="{Currcode}" 
-                                items="{view>/Currency}">
+                                items="{view>/Currency}"
+                                editable="true"
+                                enabled="false"
+                                open="true">
                                 <items>
                                     <!-- 위에서 xmlns:core="sap.ui.core" 를 <mvc:View> 의 속성으로 추가 -->
-                                        <core:Item key="{view>/Key}" text="{view>/Key} : {view>/Name}" />
+                                        <core:Item key="{view>Key}" text="{view>Key} : {view>Name}" />
                                 </items>
                             </ComboBox>
                         </t:template>
@@ -45,5 +48,13 @@
                 </t:columns>
             </t:Table>
         </content>
+        <footer>
+            <OverflowToolbar >
+                <content>
+                    <ToolbarSpacer />
+                    <Button text="삭제" icon="sap-icon://delete" type="Emphasized" press="onDelete" />
+                </content>
+            </OverflowToolbar>
+        </footer>
     </Page>
 </mvc:View>
