미선택일때 삭제버튼 클릭 시 정보성 messageBox 띄우기

--- a/odatamodel_multi_delete/webapp/view/Main.view.xml
+++ b/odatamodel_multi_delete/webapp/view/Main.view.xml
@@ -6,7 +6,8 @@
     >
     <Page id="page" title="{i18n>title}">
         <content>
-            <t:Table rows="{/CarrierSet}">
+            <t:Table id="idTable" 
+                rows="{/CarrierSet}">
                 <t:columns>
                     <t:Column >
                         <!-- 필드명 -->
