--- a/input/webapp/view/Main.view.xml
+++ b/input/webapp/view/Main.view.xml
@@ -1,15 +1,40 @@
 <mvc:View controllerName="sync.e21.input.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:l="sap.ui.layout"
+    xmlns:f="sap.ui.layout.form">
     <Page id="page" title="{i18n>title}">
         <content>
-            <!-- 값을 입력받기 위해서는 sap.m.Input 을 사용한다. -->
-            <Input id="idInput1" value="" type="Number" />
-            <Input id="idInput2" value="" type="Number" />
+            <Panel headerText="ID로 접근하여 값을 읽고 쓰기 해보기">
+                <!-- 값을 입력받기 위해서는 sap.m.Input 을 사용한다. -->
+                <f:SimpleForm layout="ResponsiveGridLayout">
+                    <Input id="idInput1" value="" type="Number" />
+                    <Input id="idInput2" value="" type="Number" />
+        
+                    <Text id="idText" text="계산 결과가 출력될 예정입니다." />
+                    <Label text="" />
 
-            <Text id="idText" text="계산 결과가 출력될 예정입니다." />
+                    <Button text="더하기" press="onAdd" >
+                        <layoutData>
+                            <!-- indent : 들여쓰기 -->
+                            <l:GridData indent="L8 M8 S8" span="L4 M4 S4" />
+                        </layoutData>
+                    </Button>
+                </f:SimpleForm>
+            </Panel>
+            <Panel headerText="JSON Model로 접근하여 값을 읽고 쓰기 해보기">
+                <f:SimpleForm layout="ResponsiveLayout">
+                    <Label text="숫자1" />
+                    <Input value="{/value1}" type="Number" />
+                    <Label text="숫자2" />
+                    <Input value="{/value2}" type="Number" />
+                    <Label text="결과" />
+                    <Input value="{/result}" editable="false" />
 
-            <Button text="더하기" press="onAdd" />
+                    <Label />
+                    <Button text="JSON Model로 더하기" press="onAddJson" />
+                </f:SimpleForm>
+            </Panel>
         </content>
     </Page>
 </mvc:View>
